# prologix_netfinder

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
prologix_netfinder/: getifaddrs.py  nfcli.py  nfutil.py
